# cookie-stand-api

./: Dockerfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
cookie_stand_api/: settings.py  urls.py
cookie_stands/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cookie_stands/migrations/: 0001_initial.py
